[gd_scene load_steps=2 format=3 uid="uid://dg3qjnes613ou"]

[ext_resource type="Script" uid="uid://8amx7fpcvs84" path="res://scenes/PlayerButtons/player_buttons.gd" id="1_mal4x"]

[node name="PlayerButtons" type="HBoxContainer"]
anchors_preset = -1
anchor_left = 0.123
anchor_top = 0.094000004
anchor_right = 0.123
anchor_bottom = 0.094000004
offset_left = -236.16
offset_top = -101.520004
offset_right = -0.16000366
offset_bottom = -0.5200043
grow_horizontal = 0
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource("1_mal4x")

[node name="Left" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="InsuranceButton" type="Button" parent="Left"]
layout_mode = 2
text = "Insurance"

[node name="SplitButton" type="Button" parent="Left"]
layout_mode = 2
text = "Split
"

[node name="DoubleDownButton" type="Button" parent="Left"]
layout_mode = 2
size_flags_vertical = 3
text = "Double down"

[node name="Right" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="HitButton" type="Button" parent="Right"]
layout_mode = 2
text = "Hit"

[node name="StandButton" type="Button" parent="Right"]
layout_mode = 2
text = "Stand"

[node name="SurrenderButton" type="Button" parent="Right"]
layout_mode = 2
text = "Surrender"

[connection signal="pressed" from="Left/InsuranceButton" to="." method="_on_insurance_button_pressed"]
[connection signal="pressed" from="Left/SplitButton" to="." method="_on_split_button_pressed"]
[connection signal="pressed" from="Left/DoubleDownButton" to="." method="_on_double_down_button_pressed"]
[connection signal="pressed" from="Right/HitButton" to="." method="_on_hit_button_pressed"]
[connection signal="pressed" from="Right/StandButton" to="." method="_on_stand_button_pressed"]
[connection signal="pressed" from="Right/SurrenderButton" to="." method="_on_surrender_button_pressed"]
